<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/map_action"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/map_menu"/>
    <item
        android:id="@+id/rate_action"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/rate_menu"/>
    <item
        android:id="@+id/help_action"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/help_menu"/>
    <item
        android:id="@+id/add_action"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/add_menu"/>
    <item
        android:id="@+id/scan_action"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/scan_menu"/>
</menu>