<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <ImageView
        android:id="@+id/weather_back"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/notification_bg"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        />
    <TextView
        android:id="@+id/temperature"
        style="@style/NotificationText"
        android:textSize="50sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/sample_temperature"
        />
    <TextView
        android:id="@+id/location"
        style="@style/NotificationText"
        android:textSize="30sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/temperature"
        android:text="@string/sample_location"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:background="@color/colorNotifBlur"
        >
        <ImageButton
            android:id="@+id/go_bike"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:src="@drawable/ic_action_bike"
            android:background="@android:color/transparent"
            />
        <TextView
            android:id="@+id/go_bike_text"
            style="@style/NotificationActionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/go_bike"
            android:layout_toEndOf="@id/go_bike"
            android:text="@string/go_bike"
            />

        <ImageButton
            android:id="@+id/go_tram"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toEndOf="@+id/go_bike_text"
            android:layout_toRightOf="@id/go_bike_text"
            android:layout_centerVertical="true"
            android:layout_marginLeft="25dp"
            android:layout_marginStart="25dp"
            android:src="@drawable/ic_action_tram"
            android:background="@android:color/transparent"
            />
        <TextView
            android:id="@+id/go_tram_text"
            style="@style/NotificationActionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/go_tram"
            android:layout_toEndOf="@id/go_tram"
            android:text="@string/go_tram"
            />
    </RelativeLayout>
</RelativeLayout>